--- a/qradmin/src/index.html
+++ b/qradmin/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <meta charset="utf-8" />
-  <title>Qyaho</title>
+  <title>Qyaho-admin</title>
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -11,8 +11,7 @@
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
     crossorigin="anonymous"
   />
-  <!--- index.html   <body background="../../../assets/back.jpg" back></body>
-    -->
+  <!--- index.html   <body background="../../../assets/back.jpg" back></body>-->
   <link
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     rel="stylesheet"
@@ -23,7 +22,6 @@
     href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
     rel="stylesheet"
   />
-
   <body>
     <app-root></app-root>
   </body>
