--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="styles.css"><!DOCTYPE html>
+<link rel="stylesheet" href="styles.css"><script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script><!DOCTYPE html>
 <html lang="ko">
   <meta charset="utf-8"/>
   <title>Qyaho-admin</title>
@@ -11,7 +11,5 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
   <link href="https://fonts.googleapis.com/css2?family=Jua&amp;display=swap" rel="stylesheet"/>
-  <body>
-    <app-root></app-root>
-  <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+  <app-root></app-root>
 </html>
